# swagger/swagger.yaml
@@ -68,28 +68,6 @@ definitions:
       type:
         id: 29f83d16-09c4-4be5-8cae-e232d41f388a
         name: Hostname
-    - alias: AnAlias
-      classified_at: "2020-09-03T15:00:42.112975Z"
-      environmental_cvss: AV:N/AC:H/PR:N/UI:R/S:U/C:H/I:H/A:H
-      id: a8720503-0284-45fd-9cf4-5bb6c500966f
-      identifier: vulcan.example.com
-      options: '{"timeout":60}'
-      rolfp: R:1/O:1/L:0/F:0/P:0+S:1
-      scannable: true
-      type:
-        id: 29f83d16-09c4-4be5-8cae-e232d41f388a
-        name: Hostname
-    - alias: AnAlias
-      classified_at: "2020-09-03T15:00:42.112975Z"
-      environmental_cvss: AV:N/AC:H/PR:N/UI:R/S:U/C:H/I:H/A:H
-      id: a8720503-0284-45fd-9cf4-5bb6c500966f
-      identifier: vulcan.example.com
-      options: '{"timeout":60}'
-      rolfp: R:1/O:1/L:0/F:0/P:0+S:1
-      scannable: true
-      type:
-        id: 29f83d16-09c4-4be5-8cae-e232d41f388a
-        name: Hostname
     items:
       $ref: '#/definitions/Asset'
     title: 'Mediatype identifier: asset; type=collection; view=default'
@@ -264,36 +242,6 @@ definitions:
       type:
         id: 29f83d16-09c4-4be5-8cae-e232d41f388a
         name: Hostname
-    - alias: AnAlias
-      classified_at: "2020-09-03T15:00:42.112975Z"
-      environmental_cvss: AV:N/AC:H/PR:N/UI:R/S:U/C:H/I:H/A:H
-      id: a8720503-0284-45fd-9cf4-5bb6c500966f
-      identifier: vulcan.example.com
-      options: '{"timeout":60}'
-      rolfp: R:1/O:1/L:0/F:0/P:0+S:1
-      scannable: true
-      status:
-        code: 3944598920153519998
-        error: Quo placeat magni harum ea.
-        type: Voluptatum mollitia consequuntur dignissimos.
-      type:
-        id: 29f83d16-09c4-4be5-8cae-e232d41f388a
-        name: Hostname
-    - alias: AnAlias
-      classified_at: "2020-09-03T15:00:42.112975Z"
-      environmental_cvss: AV:N/AC:H/PR:N/UI:R/S:U/C:H/I:H/A:H
-      id: a8720503-0284-45fd-9cf4-5bb6c500966f
-      identifier: vulcan.example.com
-      options: '{"timeout":60}'
-      rolfp: R:1/O:1/L:0/F:0/P:0+S:1
-      scannable: true
-      status:
-        code: 3944598920153519998
-        error: Quo placeat magni harum ea.
-        type: Voluptatum mollitia consequuntur dignissimos.
-      type:
-        id: 29f83d16-09c4-4be5-8cae-e232d41f388a
-        name: Hostname
     items:
       $ref: '#/definitions/Assetresponse'
     title: 'Mediatype identifier: assetresponse; type=collection; view=default'
@@ -393,7 +341,7 @@ definitions:
         - a14c7c65-66ab-4676-bcf6-0dea9719f5c6
         - 9f7a0c78-b752-4126-aa6d-0f286ada7b8f
         items:
-          example: Est iure provident non consequatur perferendis dolor.
+          example: Quis ipsam ducimus sit odio tenetur consequatur.
           type: string
         type: array
     required:
@@ -634,22 +582,6 @@ definitions:
       status_previous: OPEN
       tag: team:security
       user: user@adevinta.com
-    - created_at: "2021-03-27T00:26:43.211506Z"
-      finding_id: 3c7d7003-c53d-4ccc-80e7-f21da241b2d4
-      id: b0720503-0a84-43fd-9cf4-5bb6c500226f
-      notes: This finding is a false positive because...
-      status: FALSE_POSITIVE
-      status_previous: OPEN
-      tag: team:security
-      user: user@adevinta.com
-    - created_at: "2021-03-27T00:26:43.211506Z"
-      finding_id: 3c7d7003-c53d-4ccc-80e7-f21da241b2d4
-      id: b0720503-0a84-43fd-9cf4-5bb6c500226f
-      notes: This finding is a false positive because...
-      status: FALSE_POSITIVE
-      status_previous: OPEN
-      tag: team:security
-      user: user@adevinta.com
     items:
       $ref: '#/definitions/Finding_overwrite'
     title: 'Mediatype identifier: finding_overwrite; type=collection; view=default'
@@ -658,6 +590,112 @@ definitions:
     description: FindingCollection is the media type for an array of Finding (default
       view)
     example:
+    - attachments:
+      - content_type: application/json
+        data: e30=
+        name: JSON string
+      current_exposure: 4631
+      details: ""
+      id: a8720503-0284-45fd-9cf4-5bb6c500966f
+      impact_details: ""
+      issue:
+        cwe_id: 358
+        description: This domain has at least one MX record
+        id: b0720503-0a84-43fd-9cf4-5bb6c500226f
+        recommendations:
+        - It is recommended to run DMARC
+        reference_links: []
+        summary: MX presence
+      resources:
+      - attributes:
+        - Hostname
+        - Port
+        name: Network Resources
+        resources:
+        - Hostname: test.example.com
+          Port: "443"
+      - attributes:
+        - Hostname
+        - Port
+        name: Network Resources
+        resources:
+        - Hostname: test.example.com
+          Port: "443"
+      - attributes:
+        - Hostname
+        - Port
+        name: Network Resources
+        resources:
+        - Hostname: test.example.com
+          Port: "443"
+      score: 6.9
+      source:
+        component: vulcan-tls
+        id: f8129c7f-7abf-41ba-ab1f-c97090bb3db4
+        instance: b3320f03-1284-42fd-9cf4-5bb6c500966f
+        name: vulcan
+        options: '{"timeout":60}'
+        time: "2019-06-08 11:16:40"
+      status: OPEN
+      target:
+        id: f8129c7f-7abf-41ba-ab1f-c97090bb3db4
+        identifier: www.test.com
+        tags:
+        - team:vulcan
+      total_exposure: 4631
+    - attachments:
+      - content_type: application/json
+        data: e30=
+        name: JSON string
+      current_exposure: 4631
+      details: ""
+      id: a8720503-0284-45fd-9cf4-5bb6c500966f
+      impact_details: ""
+      issue:
+        cwe_id: 358
+        description: This domain has at least one MX record
+        id: b0720503-0a84-43fd-9cf4-5bb6c500226f
+        recommendations:
+        - It is recommended to run DMARC
+        reference_links: []
+        summary: MX presence
+      resources:
+      - attributes:
+        - Hostname
+        - Port
+        name: Network Resources
+        resources:
+        - Hostname: test.example.com
+          Port: "443"
+      - attributes:
+        - Hostname
+        - Port
+        name: Network Resources
+        resources:
+        - Hostname: test.example.com
+          Port: "443"
+      - attributes:
+        - Hostname
+        - Port
+        name: Network Resources
+        resources:
+        - Hostname: test.example.com
+          Port: "443"
+      score: 6.9
+      source:
+        component: vulcan-tls
+        id: f8129c7f-7abf-41ba-ab1f-c97090bb3db4
+        instance: b3320f03-1284-42fd-9cf4-5bb6c500966f
+        name: vulcan
+        options: '{"timeout":60}'
+        time: "2019-06-08 11:16:40"
+      status: OPEN
+      target:
+        id: f8129c7f-7abf-41ba-ab1f-c97090bb3db4
+        identifier: www.test.com
+        tags:
+        - team:vulcan
+      total_exposure: 4631
     - attachments:
       - content_type: application/json
         data: e30=
@@ -785,6 +823,10 @@ definitions:
         max_score: 6.9
         summary: Site Without HTTPS
         targets_count: 14
+      - issue_id: a8720503-0284-45fd-9cf4-5bb6c500966f
+        max_score: 6.9
+        summary: Site Without HTTPS
+        targets_count: 14
       pagination:
         limit: 0.8451506497515555
         more: false
@@ -801,6 +843,59 @@ definitions:
     description: Findings list (default view)
     example:
       findings:
+      - attachments:
+        - content_type: application/json
+          data: e30=
+          name: JSON string
+        current_exposure: 4631
+        details: ""
+        id: a8720503-0284-45fd-9cf4-5bb6c500966f
+        impact_details: ""
+        issue:
+          cwe_id: 358
+          description: This domain has at least one MX record
+          id: b0720503-0a84-43fd-9cf4-5bb6c500226f
+          recommendations:
+          - It is recommended to run DMARC
+          reference_links: []
+          summary: MX presence
+        resources:
+        - attributes:
+          - Hostname
+          - Port
+          name: Network Resources
+          resources:
+          - Hostname: test.example.com
+            Port: "443"
+        - attributes:
+          - Hostname
+          - Port
+          name: Network Resources
+          resources:
+          - Hostname: test.example.com
+            Port: "443"
+        - attributes:
+          - Hostname
+          - Port
+          name: Network Resources
+          resources:
+          - Hostname: test.example.com
+            Port: "443"
+        score: 6.9
+        source:
+          component: vulcan-tls
+          id: f8129c7f-7abf-41ba-ab1f-c97090bb3db4
+          instance: b3320f03-1284-42fd-9cf4-5bb6c500966f
+          name: vulcan
+          options: '{"timeout":60}'
+          time: "2019-06-08 11:16:40"
+        status: OPEN
+        target:
+          id: f8129c7f-7abf-41ba-ab1f-c97090bb3db4
+          identifier: www.test.com
+          tags:
+          - team:vulcan
+        total_exposure: 4631
       - attachments:
         - content_type: application/json
           data: e30=
@@ -967,6 +1062,16 @@ definitions:
       id: f6360346-77a5-4f97-b919-331363b3af26
       name: Default group
       options: '{"timeout":60}'
+    - assets_count: 1
+      description: All newly created assets are added to the Default group
+      id: f6360346-77a5-4f97-b919-331363b3af26
+      name: Default group
+      options: '{"timeout":60}'
+    - assets_count: 1
+      description: All newly created assets are added to the Default group
+      id: f6360346-77a5-4f97-b919-331363b3af26
+      name: Default group
+      options: '{"timeout":60}'
     items:
       $ref: '#/definitions/Group'
     title: 'Mediatype identifier: group; type=collection; view=default'
@@ -1022,6 +1127,14 @@ definitions:
       id: f6360346-77a5-4f97-b919-331363b3af26
       name: Default group
       options: '{"timeout":60}'
+    - description: All newly created assets are added to the Default group
+      id: f6360346-77a5-4f97-b919-331363b3af26
+      name: Default group
+      options: '{"timeout":60}'
+    - description: All newly created assets are added to the Default group
+      id: f6360346-77a5-4f97-b919-331363b3af26
+      name: Default group
+      options: '{"timeout":60}'
     items:
       $ref: '#/definitions/GroupWithoutAssetsCount'
     title: 'Mediatype identifier: group; type=collection; view=default'
@@ -1066,14 +1179,14 @@ definitions:
         example:
         - It is recommended to run DMARC
         items:
-          example: Ducimus sit odio tenetur consequatur.
+          example: Voluptatum sit eos illum.
           type: string
         type: array
       reference_links:
         description: Documentation reference for the issue
         example: []
         items:
-          example: Et voluptate est est illo.
+          example: Tempora nemo corrupti sed qui.
           type: string
         type: array
       summary:
@@ -1176,6 +1289,54 @@ definitions:
       type:
         id: 29f83d16-09c4-4be5-8cae-e232d41f388a
         name: Hostname
+    - alias: AnAlias
+      classified_at: "2020-09-03T15:00:42.112975Z"
+      environmental_cvss: AV:N/AC:H/PR:N/UI:R/S:U/C:H/I:H/A:H
+      groups:
+      - description: All newly created assets are added to the Default group
+        id: f6360346-77a5-4f97-b919-331363b3af26
+        name: Default group
+        options: '{"timeout":60}'
+      - description: All newly created assets are added to the Default group
+        id: f6360346-77a5-4f97-b919-331363b3af26
+        name: Default group
+        options: '{"timeout":60}'
+      - description: All newly created assets are added to the Default group
+        id: f6360346-77a5-4f97-b919-331363b3af26
+        name: Default group
+        options: '{"timeout":60}'
+      id: a8720503-0284-45fd-9cf4-5bb6c500966f
+      identifier: vulcan.example.com
+      options: '{"timeout":60}'
+      rolfp: R:1/O:1/L:0/F:0/P:0+S:1
+      scannable: true
+      type:
+        id: 29f83d16-09c4-4be5-8cae-e232d41f388a
+        name: Hostname
+    - alias: AnAlias
+      classified_at: "2020-09-03T15:00:42.112975Z"
+      environmental_cvss: AV:N/AC:H/PR:N/UI:R/S:U/C:H/I:H/A:H
+      groups:
+      - description: All newly created assets are added to the Default group
+        id: f6360346-77a5-4f97-b919-331363b3af26
+        name: Default group
+        options: '{"timeout":60}'
+      - description: All newly created assets are added to the Default group
+        id: f6360346-77a5-4f97-b919-331363b3af26
+        name: Default group
+        options: '{"timeout":60}'
+      - description: All newly created assets are added to the Default group
+        id: f6360346-77a5-4f97-b919-331363b3af26
+        name: Default group
+        options: '{"timeout":60}'
+      id: a8720503-0284-45fd-9cf4-5bb6c500966f
+      identifier: vulcan.example.com
+      options: '{"timeout":60}'
+      rolfp: R:1/O:1/L:0/F:0/P:0+S:1
+      scannable: true
+      type:
+        id: 29f83d16-09c4-4be5-8cae-e232d41f388a
+        name: Hostname
     items:
       $ref: '#/definitions/Listassetentry'
     title: 'Mediatype identifier: listassetentry; type=collection; view=default'
@@ -1250,6 +1411,9 @@ definitions:
     description: PolicyCollection is the media type for an array of Policy (default
       view)
     example:
+    - id: af36818a-0f30-412c-9692-d37716075861
+      name: Sample Policy
+      settings_count: 12
     - id: af36818a-0f30-412c-9692-d37716075861
       name: Sample Policy
       settings_count: 12
@@ -1465,24 +1629,6 @@ definitions:
           settings_count: 12
       schedule:
         cron: 0 7 1 * *
-    - autosend: false
-      disabled: true
-      global: false
-      id: 9a100645-e51a-4e71-8a4f-1e462ce9a40d
-      name: Every midnight
-      policy_groups:
-      - group:
-          assets_count: 1
-          description: All newly created assets are added to the Default group
-          id: f6360346-77a5-4f97-b919-331363b3af26
-          name: Default group
-          options: '{"timeout":60}'
-        policy:
-          id: af36818a-0f30-412c-9692-d37716075861
-          name: Sample Policy
-          settings_count: 12
-      schedule:
-        cron: 0 7 1 * *
     items:
       $ref: '#/definitions/Program'
     title: 'Mediatype identifier: program; type=collection; view=default'
@@ -1597,6 +1743,7 @@ definitions:
     example:
     - email: john.doe@vulcan.example.com
     - email: john.doe@vulcan.example.com
+    - email: john.doe@vulcan.example.com
     items:
       $ref: '#/definitions/Recipient'
     title: 'Mediatype identifier: recipient; type=collection; view=default'
@@ -1613,7 +1760,7 @@ definitions:
         - john.doe@vulcan.example.com
         - jane.doe@vulcan.example.com
         items:
-          example: Perferendis cumque enim totam ut.
+          example: Est iure provident non consequatur perferendis dolor.
           type: string
         type: array
     required:
@@ -1684,7 +1831,7 @@ definitions:
         - Hostname
         - Port
         items:
-          example: Corrupti rerum deleniti aut sed illo.
+          example: Est illo et corrupti rerum deleniti aut.
           type: string
         type: array
       name:
@@ -1699,7 +1846,8 @@ definitions:
         items:
           additionalProperties: true
           example:
-            Omnis perferendis.: Natus esse neque aliquid.
+            Porro placeat omnis perferendis maxime natus.: Neque aliquid molestias
+              velit quis laborum.
           type: object
         type: array
     title: 'Mediatype identifier: resource; view=default'
@@ -2063,7 +2211,7 @@ definitions:
         example:
         - team:vulcan
         items:
-          example: Velit quis.
+          example: Ratione perferendis.
           type: string
         type: array
     title: 'Mediatype identifier: target; view=default'
@@ -2212,26 +2360,6 @@ definitions:
     description: TeammemberCollection is the media type for an array of Teammember
       (default view)
     example:
-    - role: owner
-      user:
-        active: true
-        admin: true
-        email: john.doe@vulcan.example.com
-        firstname: John
-        id: 967d9966-b561-4233-bd6f-cac603fd8320
-        last_login: "2018-09-07T10:40:52Z"
-        lastname: Doe
-        observer: true
-    - role: owner
-      user:
-        active: true
-        admin: true
-        email: john.doe@vulcan.example.com
-        firstname: John
-        id: 967d9966-b561-4233-bd6f-cac603fd8320
-        last_login: "2018-09-07T10:40:52Z"
-        lastname: Doe
-        observer: true
     - role: owner
       user:
         active: true
@@ -2891,7 +3019,7 @@ paths:
       summary: Find finding findings
       tags:
       - findings
-  /teams/{team_id}/findings/{finding_id}/overwrite:
+  /teams/{team_id}/findings/{finding_id}/overwrites:
     get:
       description: List Finding Overwrites.
       operationId: findings#List Finding Overwrites
